# trillium_watts

./: .gitignore  Makefile  README.md  pyproject.toml  render.yaml  requirements.txt
.streamlit/: config.toml
app/: streamlit_app.py
config/: default.yaml
data/predictions/: demanda_historica_y_predicha.csv
notebooks/: 01_eda.ipynb  02_model_experiments.ipynb
notebooks/legacy/: original_notebook.ipynb
scripts/: download_data.py  predict.py  preprocess.py  train.py
src/trillium_watts/: __init__.py  config.py
src/trillium_watts/data/: cleaning.py  imputation.py  loader.py  outliers.py
src/trillium_watts/features/: cyclic.py  pipeline.py  temporal.py
src/trillium_watts/models/: architectures.py  persistence.py  sequences.py  training.py
src/trillium_watts/prediction/: autoregressive.py  export.py
src/trillium_watts/simulation/: economics.py  scenarios.py  solar.py
src/trillium_watts/visualization/: plots_matplotlib.py  plots_plotly.py
tests/: test_autoregressive.py  test_data_cleaning.py  test_features.py  test_simulation.py
